# backend/src/main/kotlin/hu/hollo/news/controller/UsersController.kt
@@ -4,6 +4,7 @@ import hu.hollo.news.api.UsersApi
 import hu.hollo.news.model.dto.CreateUserRequestDto
 import hu.hollo.news.model.dto.UserCredentialsDto
 import hu.hollo.news.model.dto.UserDto
+import hu.hollo.news.model.dto.UserRegistrationDto
 import hu.hollo.news.service.UserService
 import org.springframework.beans.factory.annotation.Value
 import org.springframework.boot.web.server.Cookie.SameSite
@@ -12,7 +13,13 @@ import org.springframework.http.ResponseCookie
 import org.springframework.http.ResponseEntity
 import org.springframework.security.core.context.SecurityContextHolder
 import org.springframework.security.oauth2.jwt.Jwt
+import org.springframework.ui.Model
+import org.springframework.web.bind.annotation.GetMapping
+import org.springframework.web.bind.annotation.PathVariable
+import org.springframework.web.bind.annotation.ResponseBody
 import org.springframework.web.bind.annotation.RestController
+import org.thymeleaf.TemplateEngine
+import org.thymeleaf.context.Context
 import java.util.*
 import kotlin.time.Duration.Companion.hours
 import kotlin.time.toJavaDuration
@@ -20,7 +27,8 @@ import kotlin.time.toJavaDuration
 @RestController
 class UsersController(
     private val userService: UserService,
-    @Value("\${auth_cookie_name}") private val cookieName: String
+    @Value("\${auth_cookie_name}") private val cookieName: String,
+    private val templateEngine: TemplateEngine
 ) : UsersApi {
 
     override fun login(userCredentialsDto: UserCredentialsDto): ResponseEntity<UserDto> {
@@ -70,6 +78,19 @@ class UsersController(
     override fun deleteUserById(id: UUID): ResponseEntity<Unit> {
         userService.deleteUser(id, getJwtToken())
         return ResponseEntity.noContent().build()
+    }
+
+    override fun registerUser(userRegistrationDto: UserRegistrationDto): ResponseEntity<Unit> =
+        ResponseEntity.created(userService.registerUser(userRegistrationDto)).build()
+
+
+    // TODO: redirect to localhost:4200 accept
+    @GetMapping("/users/approve/{id}")
+    @ResponseBody
+    fun getUser(@PathVariable id: UUID, model: Model): String {
+        val context = Context()
+        userService.approveUser(id)
+        return templateEngine.process("page/user_accepted.html", context)
     }
 
     private fun getJwtToken(): Jwt =
